// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Run some repmin test cases should handle a basic repmin 1`] = `
Array [
  "Pre-Tree",
]
`;

exports[`Run some repmin test cases should handle a basic repmin 2`] = `
Array [
  "Pre-Tree",
  "Post-Tree",
]
`;

exports[`Run some repmin test cases should handle a basic repmin 3`] = `
Array [
  "Pre-Tree",
  "Post-Tree",
  "Post-Attach",
]
`;

exports[`Run some repmin test cases should handle a basic repmin 4`] = `
Array [
  "Pre-Tree",
  "Post-Tree",
  "Post-Attach",
  "min({\\"type\\":\\"leaf\\",\\"value\\":7}) => 7",
  "min({\\"type\\":\\"leaf\\",\\"value\\":5}) => 5",
  "min({\\"type\\":\\"leaf\\",\\"value\\":9}) => 9",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}}) => 5",
  "min({\\"type\\":\\"leaf\\",\\"value\\":3}) => 3",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}) => 3",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":7},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}}) => 3",
  "min({\\"type\\":\\"leaf\\",\\"value\\":4}) => 4",
  "min({\\"type\\":\\"leaf\\",\\"value\\":1}) => 1",
  "min({\\"type\\":\\"leaf\\",\\"value\\":6}) => 6",
  "min({\\"type\\":\\"leaf\\",\\"value\\":8}) => 8",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}) => 6",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}) => 1",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":4},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}}) => 1",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":7},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":4},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}}}) => 1",
  "global min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":7},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":4},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}}}) => 1",
  "Root Globmin",
]
`;

exports[`Run some repmin test cases should handle a basic repmin 5`] = `
Array [
  "Pre-Tree",
  "Post-Tree",
  "Post-Attach",
  "min({\\"type\\":\\"leaf\\",\\"value\\":7}) => 7",
  "min({\\"type\\":\\"leaf\\",\\"value\\":5}) => 5",
  "min({\\"type\\":\\"leaf\\",\\"value\\":9}) => 9",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}}) => 5",
  "min({\\"type\\":\\"leaf\\",\\"value\\":3}) => 3",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}) => 3",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":7},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}}) => 3",
  "min({\\"type\\":\\"leaf\\",\\"value\\":4}) => 4",
  "min({\\"type\\":\\"leaf\\",\\"value\\":1}) => 1",
  "min({\\"type\\":\\"leaf\\",\\"value\\":6}) => 6",
  "min({\\"type\\":\\"leaf\\",\\"value\\":8}) => 8",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}) => 6",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}) => 1",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":4},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}}) => 1",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":7},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":4},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}}}) => 1",
  "global min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":7},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":4},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}}}) => 1",
  "Root Globmin",
  "min({\\"type\\":\\"leaf\\",\\"value\\":7}) => 7",
  "min({\\"type\\":\\"leaf\\",\\"value\\":5}) => 5",
  "min({\\"type\\":\\"leaf\\",\\"value\\":9}) => 9",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}}) => 5",
  "min({\\"type\\":\\"leaf\\",\\"value\\":3}) => 3",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}) => 3",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":7},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}}) => 3",
  "global min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":7},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}}) => 1",
  "min({\\"type\\":\\"leaf\\",\\"value\\":7}) => 7",
  "global min({\\"type\\":\\"leaf\\",\\"value\\":7}) => 1",
  "repmin({\\"type\\":\\"leaf\\",\\"value\\":7}) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "min({\\"type\\":\\"leaf\\",\\"value\\":5}) => 5",
  "min({\\"type\\":\\"leaf\\",\\"value\\":9}) => 9",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}}) => 5",
  "min({\\"type\\":\\"leaf\\",\\"value\\":3}) => 3",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}) => 3",
  "global min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}) => 1",
  "min({\\"type\\":\\"leaf\\",\\"value\\":5}) => 5",
  "min({\\"type\\":\\"leaf\\",\\"value\\":9}) => 9",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}}) => 5",
  "global min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}}) => 1",
  "min({\\"type\\":\\"leaf\\",\\"value\\":5}) => 5",
  "global min({\\"type\\":\\"leaf\\",\\"value\\":5}) => 1",
  "repmin({\\"type\\":\\"leaf\\",\\"value\\":5}) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "min({\\"type\\":\\"leaf\\",\\"value\\":9}) => 9",
  "global min({\\"type\\":\\"leaf\\",\\"value\\":9}) => 1",
  "repmin({\\"type\\":\\"leaf\\",\\"value\\":9}) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "repmin({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}}) => {\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}",
  "min({\\"type\\":\\"leaf\\",\\"value\\":3}) => 3",
  "global min({\\"type\\":\\"leaf\\",\\"value\\":3}) => 1",
  "repmin({\\"type\\":\\"leaf\\",\\"value\\":3}) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "repmin({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}) => {\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}",
  "repmin({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":7},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}}) => {\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}}",
  "min({\\"type\\":\\"leaf\\",\\"value\\":4}) => 4",
  "min({\\"type\\":\\"leaf\\",\\"value\\":1}) => 1",
  "min({\\"type\\":\\"leaf\\",\\"value\\":6}) => 6",
  "min({\\"type\\":\\"leaf\\",\\"value\\":8}) => 8",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}) => 6",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}) => 1",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":4},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}}) => 1",
  "global min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":4},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}}) => 1",
  "min({\\"type\\":\\"leaf\\",\\"value\\":4}) => 4",
  "global min({\\"type\\":\\"leaf\\",\\"value\\":4}) => 1",
  "repmin({\\"type\\":\\"leaf\\",\\"value\\":4}) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "min({\\"type\\":\\"leaf\\",\\"value\\":1}) => 1",
  "min({\\"type\\":\\"leaf\\",\\"value\\":6}) => 6",
  "min({\\"type\\":\\"leaf\\",\\"value\\":8}) => 8",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}) => 6",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}) => 1",
  "global min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}) => 1",
  "min({\\"type\\":\\"leaf\\",\\"value\\":1}) => 1",
  "global min({\\"type\\":\\"leaf\\",\\"value\\":1}) => 1",
  "repmin({\\"type\\":\\"leaf\\",\\"value\\":1}) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "min({\\"type\\":\\"leaf\\",\\"value\\":6}) => 6",
  "min({\\"type\\":\\"leaf\\",\\"value\\":8}) => 8",
  "min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}) => 6",
  "global min({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}) => 1",
  "min({\\"type\\":\\"leaf\\",\\"value\\":6}) => 6",
  "global min({\\"type\\":\\"leaf\\",\\"value\\":6}) => 1",
  "repmin({\\"type\\":\\"leaf\\",\\"value\\":6}) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "min({\\"type\\":\\"leaf\\",\\"value\\":8}) => 8",
  "global min({\\"type\\":\\"leaf\\",\\"value\\":8}) => 1",
  "repmin({\\"type\\":\\"leaf\\",\\"value\\":8}) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "repmin({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}) => {\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}",
  "repmin({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}) => {\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}}",
  "repmin({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":4},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}}) => {\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}}}",
  "repmin({\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":7},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":5},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":9}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":3}}},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":4},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":6},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":8}}}}}) => {\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}}}}",
  "Post root repmin",
]
`;
